--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -32,6 +32,8 @@
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
     "@storybook/addon-docs": "^8.1.2",
+    "@ignite-ui/ts-config": "*",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
