--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -31,8 +31,9 @@
     "@ignite-ui/eslint-config": "*",
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
-    "@storybook/addon-docs": "^8.1.2",
     "@ignite-ui/ts-config": "*",
+    "@storybook/addon-docs": "^8.1.2",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
