--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "storybook dev -p 6006",
+    "deploy-storybook": "storybook-to-ghpages",
     "build": "storybook build"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "@storybook/blocks": "^8.1.2",
     "@storybook/react": "^8.1.2",
     "@storybook/react-vite": "^8.1.2",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/test": "^8.1.2",
     "@vitejs/plugin-react": "^4.2.1",
     "prop-types": "^15.8.1",
