--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
  ],
  "scripts": {
   "dev": "turbo run dev --parallel",
-  "build": "turbo run build"
+  "build": "turbo run build",
+  "changeset": "changeset",
+  "version-packages": "changeset version",
+  "release": "turbo run build --filter=!docs && changeset publish"
  },
  "devDependencies": {
+  "@changesets/cli": "^2.27.3",
   "turbo": "^1.13.3"
  },
  "dependencies": {
